# emble

./: .gitignore  CMakeLists.txt  build-mingw  build.bat  compile.bat  demo.emble  emble.sublime-project  emble.sublime-workspace  go.mod  go.sum  guide.md  recompile-tree-sitter  specification.emble  test.asm  test.e  test_func.asm
cmd/emblec/: main.go
demo/: demo.e  syntax.e
gosrc/ir/: ir.go
src/: ast.cpp  ast.h  codegen.cpp  codegen.go  codegen.h  emblec.cpp  error.cpp  error.h  ir.cpp  ir.go  ir.h  irgen.cpp  irgen.go  irgen.h  lexer.cpp  lexer.h  lower.go  main.cpp  main.go  parser.cpp  parser.h  utils.h
src/backend/: x86asm.cpp  x86asm.h  x86asm2.cpp
src/codegen/: codegen.cpp
src/frontend/: ast_routines.cpp  lexer.cpp  parser.cpp  typecheck.cpp
src/include/: ast.h  backend.h  codegen.h  frontend.h  ir.h
src/ir/: Block.cpp  Function.cpp  Instruction.cpp  Module.cpp  Value.cpp  ir.cpp
src/ir/ir/: block.h  function.h  instruction.h  module.h  types.h  value.h
tests/: basic_if.em  test_lexer.cpp  test_parser.cpp  testing.h
tree-sitter-emble/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-emble/bindings/c/: tree-sitter-emble.pc.in
tree-sitter-emble/bindings/c/tree_sitter/: tree-sitter-emble.h
tree-sitter-emble/bindings/go/: binding.go  binding_test.go
tree-sitter-emble/bindings/node/: binding.cc  index.js
tree-sitter-emble/bindings/python/tests/: test_binding.py
tree-sitter-emble/bindings/python/tree_sitter_emble/: __init__.py  binding.c
tree-sitter-emble/bindings/rust/: build.rs  lib.rs
tree-sitter-emble/bindings/swift/TreeSitterEmbleTests/: TreeSitterEmbleTests.swift
tree-sitter-emble/src/: grammar.json  node-types.json  parser.c
